fixed a display bug

--- a/templates/calc.html
+++ b/templates/calc.html
@@ -191,6 +191,7 @@
       //handles ajax post
       createEvent();
 
+      console.log(cControleCount);
       if(cControleCount > 3){
         var controles = $('div[name="controles"]').children();
         console.log(controles);
