fixed a display bug

--- a/templates/calc.html
+++ b/templates/calc.html
@@ -192,7 +192,7 @@
       createEvent();
 
       if(cControleCount > 3){
-        var controles = $('div[name="controles"]').children("input[name='kilometers']");
+        var controles = $('div[name="controles"]').find("input[name='kilometers']");
         console.log(controles);
 
         for(var i=2;i<22;i++){
