fixed a display bug

--- a/templates/calc.html
+++ b/templates/calc.html
@@ -212,12 +212,14 @@
   });
 
   var getControleTimes = function(dist, tDist, source) {
-    
+    console.log(tDist);
     $.post( "/_calc_times", {"dist": dist}, //function to call on server, dict with arguments
         function(data) { //this function handles the response.
             if(data.result.message.includes("added")){ //valid open and close times received
                 //display times and alert changes to user
                 console.log($(source).parents(".row").find("p[name='open']").html());
+                console.log(data.result.open);
+                console.log(data.result.close);
                 $(source).parents(".row").find("p[name='open']").html(data.result.open);
                 $(source).parents(".row").find("p[name='close']").html(data.result.close);
 
