fixed a display bug

--- a/templates/calc.html
+++ b/templates/calc.html
@@ -285,7 +285,7 @@
       });
   }
 
-  var updateAllControles(){
+  var updateAllControles = function(){
       if(cControleCount > 3){
           var kmControles = $('div[name="controles"]').find("input[name='kilometers']");
 
