Adding output.html

--- a/templates/calc.html
+++ b/templates/calc.html
@@ -143,7 +143,10 @@
   </div>
   {% endfor %}
 </div>
-<div><input type="Submit" value="Finish"></div>
+<div class=row>
+  <div class="col-sm-10"></div>
+  <div class="col-sm-2"><input type="submit" class="btn btn-info" value="Finish"></div>
+</div>
 </form>
 
 <script type="text/javascript">
