Adding output.html

--- a/templates/calc.html
+++ b/templates/calc.html
@@ -142,10 +142,10 @@
     </div>
   </div>
   {% endfor %}
-</div>
-<div class=row>
-  <div class="col-sm-10"></div>
-  <div class="col-sm-2"><input type="submit" class="btn btn-info" value="Finish"></div>
+  <div class="row">
+    <div class="col-sm-10"></div>
+    <div class="col-sm-2"><input type="submit" class="btn btn-info" value="Finish"></div>
+  </div>
 </div>
 </form>
 
