--- a/templates/calc.html
+++ b/templates/calc.html
@@ -144,7 +144,7 @@
   {% endfor %}
   <div class="row">
     <div class="col-sm-10"></div>
-    <div class="col-sm-2"><input type="submit" class="btn btn-success btn-lg pull-right" value="Finish"></div>
+    <div class="col-sm-2"><input type="submit" class="btn btn-success pull-right" value="Finish"></div>
   </div>
 </div>
 </form>
