--- a/templates/output.html
+++ b/templates/output.html
@@ -30,9 +30,7 @@
 <div class="container">
 
 {% for field in session.pop('controles',[]) %}
-  {% for item in field %}
-    {{ field + ":" + item }}<br>
-  {% endfor %}
+  {{ request.form[field] }}<br>
 {% endfor %}
 
 
