--- a/templates/calc.html
+++ b/templates/calc.html
@@ -126,13 +126,13 @@
       <div class="text-center h5" name="counter">{{ (loop.index+1) }}</div>
     </div>
     <div class="col-sm-2">
-      <input type="text" class="form-control text-center" name="miles" value="Miles"/>
+      <input type="text" class="form-control text-center" name="miles{{ (loop.index+1) }}" value="Miles"/>
     </div>
     <div class="col-sm-2">
-      <input type="text" class="form-control text-center" name="kilometers" value="Kilometers"/>
+      <input type="text" class="form-control text-center" name="kilometers{{ (loop.index+1) }}" value="Kilometers"/>
     </div>
     <div class="col-sm-3">
-      <input type="text" class="form-control text-center" name="location" value="Optional" />
+      <input type="text" class="form-control text-center" name="location{{ (loop.index+1) }}" value="Optional" />
     </div>
     <div class="col-sm-2">
       <p class="times text-center" name="open">(Open)</p>
