--- a/templates/output.html
+++ b/templates/output.html
@@ -30,7 +30,7 @@
 <div class="container">
 
 {% for i in range(2,20) %}
-  {{ request.form["miles"+i] + " : " + request.form["kilometers"+i] + " : " + request.form["location"+i] }}<br>
+  {{ request.form["miles" + i|string] + " : " + request.form["kilometers" + i|string] + " : " + request.form["location" + i|string] }}<br>
 {% endfor %}
 
 
