building output template

--- a/templates/calc.html
+++ b/templates/calc.html
@@ -104,10 +104,10 @@
       <div class="text-center h5">1</div>
     </div>
     <div class="col-sm-2">
-      <p class="text-center" name="miles">0</p>
+      <input type="text" class="form-control text-center" name="miles1" value="0" disabled>
     </div>
     <div class="col-sm-2">
-      <p class="text-center" name="kilometers">0</p>
+      <input type="text" class="form-control text-center" name="kilometers1" value="0" disabled>
     </div>
     <div class="col-sm-3">
       <input type="text" class="form-control text-center" name="location" value="Optional" />
