building output template

--- a/templates/calc.html
+++ b/templates/calc.html
@@ -110,7 +110,7 @@
       <input type="text" class="form-control text-center" name="kilometers1" value="0" />
     </div>
     <div class="col-sm-3">
-      <input type="text" class="form-control text-center" name="location" value="Optional" />
+      <input type="text" class="form-control text-center" name="location1" value="Optional" />
     </div>
     <div class="col-sm-2">
       <p class="times text-center" name="open" id="firstOpen">(Open)</p>
