--- a/templates/output.html
+++ b/templates/output.html
@@ -29,8 +29,10 @@
 <!-- bootstrap requires a 'container' div around content -->
 <div class="container">
 
-{% for i in range(2,((request.form|length)/3|int)) %}
-  {{ request.form["miles" + i|string] + " : " + request.form["kilometers" + i|string] + " : " + request.form["location" + i|string] }}<br>
+{% for i in range(2,request.form|length) %}
+
+  {{ i }}<br>
+
 {% endfor %}
 
 
