--- a/templates/output.html
+++ b/templates/output.html
@@ -31,7 +31,7 @@
 
 {% for i in range(2,request.form|length) %}
 
-  {{ i + " : " + request.form[i] }}<br>
+  {{ i|string + " : " + request.form[i] }}<br>
 
 {% endfor %}
 
