--- a/templates/calc.html
+++ b/templates/calc.html
@@ -68,13 +68,13 @@
     <div class="control-group col col-sm-3">
         <div class="input-group">
             <span class="input-group-addon">Start Date</span>
-            <input type="text" class="form-control" name="startdatetime" id="startDate" value="2016/11/05">
+            <input type="text" class="form-control" name="startdate" id="startDate" value="2016/11/05">
         </div>
     </div>
     <div class="control-group col col-sm-3">
         <div class="input-group">
             <span class="input-group-addon">Start Time</span>
-            <input type="text" class="form-control" name="startdatetime" id="startTime" value="12:0">
+            <input type="text" class="form-control" name="starttime" id="startTime" value="12:0">
         </div>
     </div>
 </div>
@@ -126,13 +126,13 @@
       <div class="text-center h5" name="counter">{{ (loop.index+1) }}</div>
     </div>
     <div class="col-sm-2">
-      <input type="text" class="form-control text-center" name="miles{{ (loop.index+1) }}" value="Miles" diabled/>
+      <input type="text" class="form-control text-center" name="miles{{ (loop.index+1) }}" value="Miles" />
     </div>
     <div class="col-sm-2">
-      <input type="text" class="form-control text-center" name="kilometers{{ (loop.index+1) }}" value="Kilometers" diabled/>
+      <input type="text" class="form-control text-center" name="kilometers{{ (loop.index+1) }}" value="Kilometers" />
     </div>
     <div class="col-sm-3">
-      <input type="text" class="form-control text-center" name="location{{ (loop.index+1) }}" value="Optional" disabled/>
+      <input type="text" class="form-control text-center" name="location{{ (loop.index+1) }}" value="Optional" />
     </div>
     <div class="col-sm-2">
       <p class="times text-center" name="open">(Open)</p>
@@ -232,7 +232,6 @@
       if(cControleCount<=21){ //because this is the max amount we have available
           nextChild = $('div[name="controles"]').children().eq(cControleCount);
           nextChild.removeClass("hidden");
-          nextChild.find("input").prop('disabled',false);
           cControleCount++;
       }
       else
@@ -267,7 +266,7 @@
   }
 
   //check date-time input with each keyup
-  $('input[name="startdatetime"]').keyup(function(){
+  $('input[name^="start"]').keyup(function(){
       //this is only a try, createEvent handles validation as well
       createEvent();
   });
