--- a/templates/output.html
+++ b/templates/output.html
@@ -29,9 +29,9 @@
 <!-- bootstrap requires a 'container' div around content -->
 <div class="container">
 
-{% for item in request.form|dictsort %}
+{% for i in range(2,20) %}
 
-  {{ item }} : {{ request.form[item] }}<br>
+  {{ request.form["miles" + i|string] + " : " + request.form["kilometers" + i|string] + " : " + request.form["location" + i|string] }}<br>
 
 {% endfor %}
 
