--- a/templates/output.html
+++ b/templates/output.html
@@ -29,10 +29,10 @@
 <!-- bootstrap requires a 'container' div around content -->
 <div class="container">
 
-{{ request.form["startdate"] + " " + request.form["starttime"]}}<br>
+{{ request.form["startdate"] + " " + request.form["starttime"] }}<br>
 
 {% for i in range(2,21) %}
-  {% if request.form["kilometers" + i|string] != "Kilometers"}
+  {% if request.form["kilometers" + i|string] != "Kilometers" %}
     {{ request.form["miles" + i|string] + " : " + request.form["kilometers" + i|string] + " : " + request.form["location" + i|string] }}<br>
   {% endif %}
 {% endfor %}
