--- a/templates/output.html
+++ b/templates/output.html
@@ -33,7 +33,9 @@
 
 {% for i in range(2,21) %}
   {% if request.form["kilometers" + i|string] != "Kilometers" %}
-    {{ request.form["miles" + i|string] + " : " + request.form["kilometers" + i|string] + " : " + request.form["location" + i|string] }}<br>
+    {{ request.form["miles" + i|string] + " : " + request.form["kilometers" + i|string] + " : " + request.form["location" + i|string] }}
+    {{ request.form["kilometers" + i|string]|getOpen }}
+    {{ request.form["kilometers" + i|string]|getClose }}<br>
   {% endif %}
 {% endfor %}
 
