--- a/templates/output.html
+++ b/templates/output.html
@@ -28,17 +28,23 @@
 <body>
 <!-- bootstrap requires a 'container' div around content -->
 <div class="container">
-
-{{ request.form["startdate"] + " " + request.form["starttime"] }}<br>
+<p>
+{{ session["bLength"] }}km BREVET
+Checkpoint             Date and Time
+====================================
+{{ request.form["location1"] }}
+       0km         start:  {{ 0|getOpen }}
+       0mi         close:  {{ 0|getClose }}
 
 {% for i in range(2,21) %}
   {% if request.form["kilometers" + i|string] != "Kilometers" %}
-    {{ request.form["miles" + i|string] + " : " + request.form["kilometers" + i|string] + " : " + request.form["location" + i|string] }}
-    {{ request.form["kilometers" + i|string]|getOpen }}
-    {{ request.form["kilometers" + i|string]|getClose }}<br>
+    {{ request.form["location" + i|string] }}
+           {{ request.form["kilometers" + i|string] }}km         open:   {{ request.form["kilometers" + i|string]|getOpen }}
+           {{ request.form["miles" + i|string] }}mi             close:   {{ request.form["kilometers" + i|string]|getClose }}
+
   {% endif %}
 {% endfor %}
-
+</p>
 
 <script type="text/javascript">
 
