fixing output template

--- a/templates/output.html
+++ b/templates/output.html
@@ -28,7 +28,7 @@
 <body>
 <!-- bootstrap requires a 'container' div around content -->
 <div class="container">
-<p>
+<pre>
 {{ session["bLength"] }}km BREVET<br>
 Checkpoint             Date and Time<br>
 ====================================<br>
@@ -44,7 +44,7 @@ Checkpoint             Date and Time<br>
            <br>
   {% endif %}
 {% endfor %}
-</p>
+</pre>
 
 <script type="text/javascript">
 
