fixing output template

--- a/templates/output.html
+++ b/templates/output.html
@@ -29,7 +29,7 @@
 <!-- bootstrap requires a 'container' div around content -->
 <div class="container">
 <h2>{{ session["bLength"] }}km BREVET</h2>
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Checkpoint</th><th>Date and Time</th>
