--- a/templates/output.html
+++ b/templates/output.html
@@ -37,13 +37,13 @@
   </thead>
   <tbody>
   <tr>
-    <td>{{ request.form["location1"] }}</td>
+    <td>{{ request.form["location1"] }}</td><td></td><td></td>
   </tr>
   <tr>
-    <td>0km</td><td>start: {{ 0|getOpen }}</td>
+    <td></td><td>0km</td><td>start: {{ 0|getOpen }}</td>
   </tr>
   <tr>
-    <td>0mi</td><td>close: {{ 0|getClose }}</td>
+    <td></td><td>0mi</td><td>close: {{ 0|getClose }}</td>
   </tr>
   {% for i in range(2,21) %}
     {% if request.form["kilometers" + i|string] != "Kilometers" %}
