--- a/templates/output.html
+++ b/templates/output.html
@@ -16,6 +16,7 @@
    <script
     src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js">
    </script>
+   <link rel="stylesheet" type="text/css" href="{{ url_for('static/css', filename='output.css') }}">
 
   <!-- <script type="text/javascript"  -->
   <!--    src="/static/js/calc.js"> -->
