--- a/static/css/output.css
+++ b/static/css/output.css
@@ -6,10 +6,6 @@
  * add more specific styles. 
  */
 
-tbody tr {
-	background: blue;
-}
-
 tbody tr:nth-child(4n+1), tbody tr:nth-child(4n+2) {
-    background: red;
+    background: rgb(209, 209, 224);
 }
