--- a/templates/calc.html
+++ b/templates/calc.html
@@ -68,13 +68,13 @@
     <div class="control-group col col-sm-3">
         <div class="input-group">
             <span class="input-group-addon">Start Date</span>
-            <input type="text" class="form-control" name="startdate" id="startDate" value="2016/11/05">
+            <input type="text" class="form-control" name="startdate" id="startDate" value="YYYY/MM/DD">
         </div>
     </div>
     <div class="control-group col col-sm-3">
         <div class="input-group">
             <span class="input-group-addon">Start Time</span>
-            <input type="text" class="form-control" name="starttime" id="startTime" value="12:0">
+            <input type="text" class="form-control" name="starttime" id="startTime" value="HH:mm">
         </div>
     </div>
 </div>
