--- a/templates/calc.html
+++ b/templates/calc.html
@@ -31,7 +31,7 @@
 
 
 <h1 class="text-center">ACP Brevet</h1>
-<form role="form" method="post" action="{{ url_for('output') }}">
+<form role="form" method="post" action="{{ url_for('output') }}" onsubmit="return validateForm()>
 <div class="container" style="position: absolute; top: 20px; left: 0px; right: 0px; margin-left: auto; margin-right: auto;" name="alertContainer">
 </div>
   <!--
@@ -297,6 +297,19 @@
               }
           });
       }
+  }
+
+  fucntion validateForm(){
+    var valid = false;
+    
+    $('input[name^="kilometers"]').each(function(){
+        if($(this).val() != "Kilometers"){
+          var kms = parseInt($(this).val());
+          if(kms >= brevetLength)
+            valid = true;
+        }
+    });
+    return valid;
   }
   
 </script>
