fixes for output template

--- a/templates/calc.html
+++ b/templates/calc.html
@@ -299,7 +299,7 @@
       }
   }
 
-  fucntion validateForm(){
+  function validateForm(){
     var valid = false;
     
     $('input[name^="kilometers"]').each(function(){
