fixes for output template

--- a/templates/calc.html
+++ b/templates/calc.html
@@ -309,6 +309,10 @@
             valid = true;
         }
     });
+
+    if(!valid)
+      sendAlert("Last control must be at least the length of the Brevet","warning");
+    
     return valid;
   }
   
